nginx-ecs-code.yaml
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "The template used to create an ECS Service from the ECS Console.",
  "Parameters": {
    "ECSClusterName": {
      "Type": "String",
      "Default": "Nginx-demo-cluster"
    },
    "ECSServiceName": {
      "Type": "String",
      "Default": "nginxdemos-hello-service-jll8io9u"
    },
    "SecurityGroupName": {
      "Type": "CommaDelimitedList",
      "Default": "ecs-a1050g1g"
    },
    "SubnetIDs": {
      "Type": "CommaDelimitedList",
      "Default": "subnet-0af0286d2048d7d45,subnet-08c891646465fb2a7"
    },
    "VpcID": {
      "Type": "String",
      "Default": "vpc-0e94afce11ca4687d"
    },
    "LoadBalancerName": {
      "Type": "String",
      "Default": "nginx-hello-elb"
    }
  },
  "Resources": {
    "ECSService": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": "Nginx-demo-cluster",
        "TaskDefinition": "arn:aws:ecs:us-east-1:211125679230:task-definition/nginxdemos-hello:3",
        "LaunchType": "FARGATE",
        "ServiceName": "nginxdemos-hello-service-jll8io9u",
        "SchedulingStrategy": "REPLICA",
        "DesiredCount": 1,
        "AvailabilityZoneRebalancing": "ENABLED",
        "LoadBalancers": [
          {
            "ContainerName": "nginxdemos-hello",
            "ContainerPort": 80,
            "LoadBalancerName": {
              "Ref": "AWS::NoValue"
            },
            "TargetGroupArn": {
              "Ref": "TargetGroup"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Ref": "SecurityGroup"
              }
            ],
            "Subnets": {
              "Ref": "SubnetIDs"
            }
          }
        },
        "PlatformVersion": "LATEST",
        "DeploymentConfiguration": {
          "DeploymentCircuitBreaker": {
            "Enable": true,
            "Rollback": true
          },
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100
        },
        "DeploymentController": {
          "Type": "ECS"
        },
        "ServiceConnectConfiguration": {
          "Enabled": false
        },
        "Tags": [],
        "EnableECSManagedTags": true
      },
      "DependsOn": [
        "Listener"
      ]
    },
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Created in ECS Console",
        "GroupName": "ecs-a1050g1g",
        "VpcId": "vpc-0e94afce11ca4687d",
        "SecurityGroupIngress": [
          {
            "FromPort": 80,
            "ToPort": 80,
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "FromPort": 80,
            "ToPort": 80,
            "IpProtocol": "tcp",
            "CidrIpv6": "::/0"
          }
        ]
      }
    },
    "LoadBalancer": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Type": "application",
        "Name": "nginx-hello-elb",
        "SecurityGroups": [
          {
            "Ref": "SecurityGroup"
          }
        ],
        "Subnets": {
          "Ref": "SubnetIDs"
        }
      }
    },
    "TargetGroup": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "HealthCheckPath": "/",
        "Name": "nginx-hello-tg",
        "Port": 80,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "HealthCheckProtocol": "HTTP",
        "VpcId": {
          "Ref": "VpcID"
        },
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "300"
          }
        ]
      }
    },
    "Listener": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": {
              "Ref": "TargetGroup"
            }
          }
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancer"
        },
        "Port": 80,
        "Protocol": "HTTP"
      }
    }
  },
  "Outputs": {
    "ClusterName": {
      "Description": "The cluster used to create the service.",
      "Value": {
        "Ref": "ECSClusterName"
      }
    },
    "ECSService": {
      "Description": "The created service.",
      "Value": {
        "Ref": "ECSService"
      }
    },
    "LoadBalancer": {
      "Description": "The created load balancer.",
      "Value": {
        "Ref": "LoadBalancer"
      }
    },
    "Listener": {
      "Description": "The created listener.",
      "Value": {
        "Ref": "Listener"
      }
    },
    "TargetGroup": {
      "Description": "The created target group.",
      "Value": {
        "Ref": "TargetGroup"
      }
    }
  }
}
